--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
+  <meta name="description" content="shad0w">
   <meta name="author" content="SitePoint">
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<h1>TEST</h1>
+	<h1>welcome to my page</h1>
   <script src="js/scripts.js"></script>
 </body>
 </html>
