--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head>
 
 <body>
-	<h1>welcome to my page</h1>
+  <h1 style="font-size: 5rem;">shad0w</h1>
+  <h2>welcome to my page</h2>
+  <h1><a href="https://github.com/Shad0wSeven"> github </a><a href="https://reddit.com/user/Shad0w_7"> reddit </a>  <a href="https://reddit.com/user/Shad0w_7"> placeholder </a></h1>
   <script src="js/scripts.js"></script>
 </body>
 </html>
