--- a/index.html
+++ b/index.html
@@ -5,17 +5,24 @@
   <meta charset="utf-8">
 
   <title>Shad0w</title>
-  <meta name="description" content="shad0w">
-  <meta name="author" content="SitePoint">
+  <meta name="description" content="my website">
+  <meta name="author" content="ayush nayak">
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
 
 </head>
 
 <body>
-  <h1 style="font-size: 5rem;">shad0w</h1>
-  <h2>welcome to my page</h2>
-  <h1><a href="https://github.com/Shad0wSeven"> github </a><a href="https://reddit.com/user/Shad0w_7"> reddit </a>  <a href="https://reddit.com/user/Shad0w_7"> placeholder </a></h1>
+  <div class="codeblock" style="padding-top: 10rem;">
+
+    <h1 class="lineDiv"><span class="lineNumber">1</span><span class="notLine">some text</span></h1>
+    <h1 class="lineDiv"><span class="lineNumber">2</span><span class="notLine">some more text</span></h1>
+    <h1 class="lineDiv"><span class="lineNumber">3</span><span class="notLine">make sure to add spans</span></h1>
+    <h1 class="lineDiv"><span class="lineNumber">4</span><span class="notLine">add even more</span></h1>
+    <h1 class="lineDiv"><span class="lineNumber">5</span><span class="notLine">add even even more</span></h1>
+
+
+  </div>
   <script src="js/scripts.js"></script>
 </body>
 </html>
