--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 <div class="ender"><span style="background-color: var(--bg-color);"></span></div>
 
-<footer class="footer"><span style="background-color: var(--comment-color);">created with a 🖥️  (obviously) in San Diego</span></footer>
+<footer class="footer"><span style="background-color: var(--bg-color); padding: 0.5rem;">created with a 🖥️  (obviously) in San Diego</span></footer>
 <script src="js/scripts.js"></script>
 </body>
 </html>
