--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
 <div class="ender"><span style="background-color: var(--bg-color);"></span></div>
 
 <footer class="footer"><span style="background-color: var(--bg-color); padding: 0.5rem;">created with a 🖥️  (obviously) in San Diego</span></footer>
-<script src="js/scripts.js"></script>
+<script src="js/scripts.js">
+
+
+</script>
 </body>
 </html>
